<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KrisMobile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="log_in">Zaloguj</string>
    <string name="login">login</string>
    <string name="password">hasło</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="inline_preferences">Ustawienia aplikacji</string>
    <string name="title_checkbox_preference">Checkbox</string>
    <string name="summary_checkbox_preference">Opis checkboxa</string>
    <string name="dialog_based_preferences">Preferencje z dialogami</string>
    <string name="title_edittext_preference">Pref z edit textem</string>
    <string name="summary_edittext_preference">Opis pref z edit textem</string>
    <string name="dialog_title_edittext_preference">Tytuł dialogu z edit textem</string>
    <string name="title_list_preference">Pref z listą</string>
    <string name="summary_list_preference">Opis pref z listą</string>

    <string-array name="entries_list_preference">
        <item>text_string</item>
        <item>text_string2</item>
        <item>text_string3</item>
    </string-array>
    <string-array name="entryvalues_list_preference">
        <item>text_string</item>
        <item>text_string2</item>
        <item>text_string3</item>
    </string-array>

    <string name="dialog_title_list_preference">Tytuł dialogu z listą</string>
    <string name="launch_preferences">launch_preferences</string>
    <string name="title_screen_preference">title_screen_preference</string>
    <string name="summary_screen_preference">summary_screen_preference</string>
    <string name="title_next_screen_toggle_preference">title_next_screen_toggle_preference</string>
    <string name="summary_next_screen_toggle_preference">summary_next_screen_toggle_preference</string>
    <string name="title_intent_preference">title_intent_preference</string>
    <string name="summary_intent_preference">summary_intent_preference</string>
    <string name="preference_attributes">preference_attributes</string>
    <string name="title_parent_preference">title_parent_preference</string>
    <string name="summary_parent_preference">summary_parent_preference</string>
    <string name="title_child_preference">title_child_preference</string>
    <string name="summary_child_preference">summary_child_preference</string>
    <string name="contractors">Kontrahenci</string>
    <string name="documents">Dokumenty</string>
    <string name="payments">Płatności</string>
    <string name="items">Towary</string>
    <string name="warehouses">Magazyny</string>
    <string name="title_activity_contractors">Kontrahenci</string>
    <string name="title_activity_contractor">ContractorActivity</string>
    <string name="action_add_contractor">Dodaj kontrahenta</string>
    <string name="action_edit_contractor">Edytuj kontrahenta</string>
    <string name="code">Kod</string>
    <string name="type">Typ</string>
    <string name="NIP">NIP</string>
    <string name="address">Adres</string>
    <string name="description">Opis</string>
    <string name="action_save_contractor">Zapisz kontrahenta</string>
    <string name="title_activity_modify_contractor">ModifyContractorActivity</string>

    <string-array name="contractor_types">
        <item>Dostawca</item>
        <item>Kupiec</item>
    </string-array>

    <string name="search">Wyszukaj</string>
    <string name="action_delete_contractor">Usuń kontrahenta</string>
    <string name="do_you_want_to_delete_contractor">Czy chcesz usunąć kontrahenta?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="contractor_deleted">Kontrahent usunięty</string>
    <string name="contractor_deleted_error">Nie można usunąć kontrahenta</string>
    <string name="action_view_contractor">Szczegóły</string>
    <string name="title_activity_documents">Dokumenty</string>
    <string name="title_activity_document">DocumentActivity</string>
    <string name="action_add_document">Dodaj dokument</string>
    <string name="action_edit_document">Edytuj dokument</string>
    <string name="action_save_document">Zapisz dokument</string>
    <string name="action_delete_document">Usuń dokument</string>
    <string name="do_you_want_to_delete_document">Czy chcesz usunąć dokument?</string>
    <string name="document_deleted">Dokument usunięty</string>
    <string name="document_deleted_error">Nie można usunąć dokumentu</string>
    <string name="document_number">Numer dokumentu</string>
    <string name="contractor">Kontrahent</string>
    <string name="document_date">Data wystawienia</string>
    <string name="payment_date">Data płatności</string>
    <string name="number">Numer</string>
    <string name="document_value">Wartość dokumentu</string>
    <string name="document_type">Typ dokumentu</string>

    <string-array name="document_types">
        <item>Zamówienie sprzedaży</item>
        <!-- <item>Zamówienie zakupu</item> -->
        <item>Faktura sprzedaży</item>
        <!-- <item>Faktura zakupu</item> -->
        <!-- <item>Przyjęcie do magazynu</item> -->
        <item>Wydanie z magazynu</item>
    </string-array>

    <string name="payment_form">Forma płatności</string>

    <string-array name="payment_forms">
        <item>Gotówka</item>
        <item>Przelew</item>
        <item>Pobranie</item>
    </string-array>

    <string name="title_activity_tmp_paged">TmpPagedActivity</string>
    <string name="PLN">(PLN)</string>
    <string name="positions">Pozycje</string>
    <string name="header">Nagłówek</string>
    <string name="title_activity_contractor_document">ContracterDocumentsActivity</string>
    <string name="none">Brak</string>
    <string name="title_activity_items">Towary</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="action_add_item">Dodaj towar</string>
    <string name="action_edit_item">Edytuj towar</string>
    <string name="action_save_item">Zapisz towar</string>
    <string name="action_delete_item">Usuń towar</string>
    <string name="do_you_want_to_delete_item">Czy chcesz usunąć towar?</string>
    <string name="item_deleted">Towar usunięty</string>
    <string name="item_deleted_error">Nie można usunąć towaru</string>
    <string name="size">Rozmiar</string>
    <string name="material">Materiał</string>
    <string name="price">Cena</string>
    <string name="item_type">Rodzaj towaru</string>
    <string name="stocks">Zasoby</string>
    <string name="net">(N)</string>
    <string name="gross">(B)</string>
    <string name="title_activity_modify_item">ModifyItemActivity</string>
    <string name="item_name">Nazwa</string>
    <string name="synchronization">Synchronizacja</string>
    <string name="server_address">Adres serwera</string>
    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="pieces">szt.</string>
    <string name="cannot_save_position_quantity">Nie można zapisać pozycji w ilosci mniejszej od 1</string>
    <string name="cannot_save_item_without_code">Nie można zapisać towaru bez kodu</string>
    <string name="cannot_save_item_without_name">Nie można zapisać towaru bez nazwy</string>
    <string name="cannot_save_item_without_price">Nie można zapisać towaru bez ceny</string>
    <string name="cannot_save_document_without_position">Nie można zapisać dokumentu bez pozycji</string>
    <string name="do_you_want_to_delete_position">Czy chcesz usunać pozycję?</string>
    <string name="port_number">Number portu</string>
    <string name="bucket_name">Nazwa bazy</string>
    <string name="config_parameters">Dane konfiguracyjne</string>
    <string name="synchro_in_progress">Trwa synchronizacja...</string>
    <string name="title_activity_payments">PaymentsActivity</string>
    <string name="all">Wszystkie</string>
    <string name="due_payments">Zaległe</string>
    <string name="finalized_payments">Rozliczone</string>
    <string name="add_payment">Dodaj płatność</string>
    <string name="payment_name">Nazwa płatności</string>
    <string name="payment_value">Wartość płatności</string>
    <string name="finalize">Rozlicz</string>
    <string name="cannot_save_payment_value">Nie można zapisać płatności o zerowej wartości</string>
    <string name="delete_database">Usuń bazę danych</string>
    <string name="delete_all_data_from_batabase">Usuń wszystkie dane z bazy</string>
    <string name="database_could_not_be_deleted">Nie udało się usunąć bazy</string>
    <string name="database_deleted">Baza usunięta</string>
    <string name="do_you_want_to_delete_database">Czy na pewno chcesz usunąć bazę danych? Spowoduje to usunięcie wszystkich informacji.</string>
    <string name="contractor_documents">" - dokumenty"</string>

</resources>
