<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory
            android:title="@string/inline_preferences">
 
        <EditTextPreference
                android:key="server_address_preference"
                android:title="@string/server_address"
                android:summary="@string/server_address"
                android:dialogTitle="@string/server_address" 
                android:digits="0123456789." 
                android:inputType="number" />
                
        <EditTextPreference
                android:key="port_number_preference"
                android:title="@string/port_number"
                android:summary="@string/port_number"
                android:dialogTitle="@string/port_number" 
                android:inputType="number" />
       
        <EditTextPreference
                android:key="bucket_name_preference"
                android:title="@string/bucket_name"
                android:summary="@string/bucket_name"
                android:dialogTitle="@string/bucket_name" 
                android:inputType="text" />
 
    </PreferenceCategory>
 
    
    
</PreferenceScreen>    